# OSRS

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: 3d.cpp.6E727DF6EDBA8F1B.idx  3d.h.2B303A735428AAE6.idx  BasicFormat.cpp.36CB1F40E77559AE.idx  BinaryFormat.cpp.FCDDAA4C06855EC4.idx  BitmaskEnum.h.45BB940B0C8EDA4D.idx  Box.h.20CE0CDFEA363576.idx  CString.h.ED54E74344FFFC3F.idx  Color.h.1D34A38245996233.idx  DriverEnums.h.BC24F4D6F9FF8683.idx  Engine.h.C5C8E35580C38584.idx  Entity.h.926C4DE94AB65CD7.idx  FilamentAPI.h.39FEB6DB8792A7E4.idx  FixedCapacityVector.h.ED45A72FAC4F5CEA.idx  Hash.h.ED1D370A873C117F.idx  ImmutableCString.h.924803ABEFDA345A.idx  Invocable.h.8642FF07C2B5623A.idx  Mutex.h.42251F34ABBF1C2A.idx  Mutex.h.912F872B0935385F.idx  Options.h.04BAB93AA45F7358.idx  Platform.h.26B7F40170284ACF.idx  PresentCallable.h.2C57B8BC984D9BE3.idx  PrivateImplementation.h.64D974724542F04A.idx  Skybox.h.5357EF8400794598.idx  Slice.h.0B3B73A3B440925C.idx  StaticString.h.F263550F36406401.idx  TMatHelpers.h.12DC2BD827961793.idx  TQuatHelpers.h.4FEE2BAEAF359F62.idx  TVecHelpers.h.2A842EB83A88E736.idx  View.h.E85100D0C0E20FE0.idx  XmlFormat.cpp.E7658E6AFE9E3B4A.idx  XmlFormat.h.D37ABF405FE11E44.idx  algorithm.h.D24E20F7A2949241.idx  auth.cpp.250A6E9E117BD5D3.idx  bitset.h.B5DF53C615F2E8EE.idx  blox.cpp.3D2FAC037B60E597.idx  boot.cpp.8025E58F9D62DD02.idx  cam.cpp.876B83F5E218B2E3.idx  cam.h.06FE5220BC074F79.idx  cframemanager.cpp.AD6A8866E7A07EA7.idx  commandline.cpp.410A9B02F2206113.idx  (+63 more)
.github/workflows/: build.yaml
.zed/: settings.json
Application/core/filamentclasses/: filamentclasses.cpp  filamentclasses.h
Application/core/file/: file.cpp  file.h
Application/core/file/binary/: BinaryFormat.cpp  BinaryFormat.h
Application/core/lang/: languages.cpp  languages.h
Application/core/parser/: filemanager.cpp  filemanager.h
Application/core/parser/basic/: BasicFormat.cpp  BasicFormat.h
Application/core/parser/basic/sub/: cryptoeditor.cpp  cryptoeditor.h  lz4editor.cpp  lz4editor.h
Application/core/parser/binary/: BinaryFormat.cpp  BinaryFormat.h
Application/core/parser/xml/: XmlFormat.cpp  XmlFormat.h
Application/core/qtclasses/: qtclasses.cpp  qtclasses.h
Application/core/saver/: saver.cpp  saver.h
Application/core/saver/sub/: cryptoeditor.cpp  cryptoeditor.h  lz4editor.cpp  lz4editor.h
Application/core/sources/: boot.cpp  resources.qrc
Application/core/sources/modules/: interface.cpp  interface.h  phases.cpp  phases.h
Application/core/sumerrors/: sumerrors.cpp  sumerrors.h
Application/interface/widgets/: widget.cpp  widget.h
Application/interface/windows/: windowmanager.cpp  windowmanager.h
Application/interface/windows/editor/: editor.cpp  editor.h  editor.ui
Application/interface/windows/startup/: startup.cpp  startup.h  startup.ui
Application/programme-language/: languagemanager.cpp  languagemanager.h
Application/programme-language/cpp/: cpp.cpp  cpp.h
Application/programme-language/cpp/blox/: blox.cpp  blox.h
Application/programme-language/cpp/resolver/: resolver.h
Application/programme-language/luau/: luau.cpp  luau.h
Application/programme-language/luau/command-line/: commandline.cpp  commandline.h
Application/programme-language/luau/logic/: logic.cpp  logic.h
Application/ram/: objects.cpp  objects.h  rammanager.cpp  rammanager.h
Application/ram/optimization/: optimization.h
Application/render/: rendermanager.cpp  rendermanager.h
Application/render/3d/: 3d.cpp  3d.h
Application/render/3d/sub/: file3d.h
Application/render/cam/: cam.cpp  cam.h
Application/render/cam/player/: playercam.cpp  playercam.h
Application/render/cam/studio/: studiocam.cpp  studiocam.h
Application/render/cframe/: cframemanager.h
Application/render/cframe/orientation/: orientation.h
Application/render/cframe/position/: position.cpp  position.h
Application/render/light/: light.cpp  light.h
Application/render/physics/: physics.cpp  physics.h
Application/web/: auth.cpp  auth.h
assets/cmake-4.2.1-windows-x86_64/share/cmake-4.2/Modules/: BundleUtilities.cmake  CMakeDetermineCompilerId.cmake  CMakePackageConfigHelpers.cmake  CMakeTestCCompiler.cmake  CMakeTestCSharpCompiler.cmake  CMakeTestCUDACompiler.cmake  CMakeTestCXXCompiler.cmake  CMakeTestFortranCompiler.cmake  CMakeTestHIPCompiler.cmake  CMakeTestJavaCompiler.cmake  CMakeTestOBJCCompiler.cmake  CMakeTestOBJCXXCompiler.cmake  CMakeTestRCCompiler.cmake  CMakeTestSwiftCompiler.cmake  CMakeVerifyManifest.cmake  CTestCoverageCollectGCOV.cmake  CTestUseLaunchers.cmake  CheckCCompilerFlag.cmake  CheckCSourceRuns.cmake  CheckCXXCompilerFlag.cmake  CheckCXXSourceRuns.cmake  CheckCompilerFlag.cmake  CheckFortranCompilerFlag.cmake  CheckFortranSourceRuns.cmake  CheckIPOSupported.cmake  CheckLinkerFlag.cmake  CheckOBJCCompilerFlag.cmake  CheckOBJCSourceRuns.cmake  CheckOBJCXXCompilerFlag.cmake  CheckOBJCXXSourceRuns.cmake  CheckPIESupported.cmake  CheckSourceCompiles.cmake  CheckSourceRuns.cmake  CheckTypeSize.cmake  ExternalProject.cmake  FeatureSummary.cmake  FetchContent.cmake  FindBISON.cmake  FindBoost.cmake  FindCUDA.cmake  (+30 more)
assets/cmake-4.2.1-windows-x86_64/share/cmake-4.2/Modules/Compiler/: MSVC-CXX-FeatureTests.cmake  XL-ASM.cmake  XL-Fortran.cmake
assets/cmake-4.2.1-windows-x86_64/share/cmake-4.2/Modules/ExternalProject/: shared_internal_commands.cmake
assets/cmake-4.2.1-windows-x86_64/share/cmake-4.2/Modules/Internal/: CMakeCUDAFindToolkit.cmake  CMakeTryCompilerOrLinkerFlag.cmake
assets/cmake-4.2.1-windows-x86_64/share/cmake-4.2/Modules/Linker/: AIX.cmake  AppleClang.cmake  GNU.cmake  MSVC.cmake  Solaris.cmake
assets/cmake-4.2.1-windows-x86_64/share/cmake-4.2/Modules/Platform/: AIX-XL-C.cmake  AIX-XL-CXX.cmake  Apple-XL-C.cmake  Apple-XL-CXX.cmake  BlueGeneP-dynamic-XL-C.cmake  BlueGeneP-dynamic-XL-CXX.cmake  BlueGeneP-static-XL-C.cmake  BlueGeneP-static-XL-CXX.cmake  BlueGeneQ-dynamic-XL-C.cmake  (+4 more)
assets/linux/: Dockerfile
assets/macos/: icon.icns
assets/windows/: Dockerfile
(+25 files in other folders)
